[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rpipe"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
license = {text = "GPLv3"}
description = "A little python remote pipe server and client."
urls = {Homepage = "https://github.com/zwimer/RPipe"}
requires-python = ">= 3.8"
dependencies = [
    # Client
    "marshmallow-dataclass[enum,union]",
    "requests",
    # Server
    "flask",
    "waitress",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
rpipe = "rpipe.client:cli"
rpipe_server = "rpipe.server:cli"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
rpipe = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "rpipe.__version__"}

# Tools

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.ruff]
ignore=["E731"]
line-length = 120
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
