[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rpipe"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["remote", "pipe"]
license = {text = "GPLv3"}
description = "A little python remote pipe server and client."
urls = {Homepage = "https://github.com/zwimer/rpipe"}
requires-python = ">= 3.10"
dependencies = [
    # Client
    "pycryptodomex",
	"cryptography",
    "requests",
    "tqdm",
    # Server
    "waitress",
    "flask",
    # Both
    "human_readable",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
rpipe = "rpipe.client:cli"
rpipe_server = "rpipe.server:cli"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
rpipe = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "rpipe.shared.version_.__version__"}

# Tools

[tool.black]
line-length = 110
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 110
[tool.ruff.lint]
ignore=["E731"]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.bandit]
skips = ["B101", "B104", "B201"]

[tool.vulture]
ignore_names = ["cli", "_help", "_show_version", "_channel", "strict_slashes"]
min_confidence = 70
paths = ["rpipe"]
