[metadata]
name = rpipe
version = attr: rpipe.__version__
url = https://github.com/zwimer/RPipe
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
license = GPLv3
license_files = LICENSE
description = A little python remote pipe server and client.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
install_requires =
	# Client
    marshmallow-dataclass[enum,union]
	requests
	# Server
	flask
	waitress
python_requires = >= 3.8
packages = find:

[options.entry_points]
console_scripts =
    rpipe = rpipe.client:main
    rpipe_server = rpipe.server:main

[options.package_data]
rpipe = py.typed
